--- a/calculadora-dupla.html
+++ b/calculadora-dupla.html
@@ -2,150 +2,136 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Calculadora de Apostas Com Casback</title>
-    <link rel="stylesheet" href="estilo.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Calculadora de Apostas Com Casback</title>
+  <link rel="stylesheet" href="style.css">
+  <script defer src="script-dupla.js"></script>
+
 </head>
 
 <body>
-    <h2>Calculadora de Apostas Com Cashback</h2>
-    <div style="margin: 1rem 0; display: flex; align-items: center;">
-        <label for="numApostas" style="margin-right: 0.5rem; font-weight: bold;">
-            Número de apostas:
-        </label>
-        <select id="numApostas" onchange="window.location.href=this.value"
-            style="padding: 0.4rem 0.6rem; border-radius: 5px; border: none;">
-            <option value="calculadora-dupla.html" selected>2 (Dupla)</option>
-            <option value="index.html">3 (Tripla)</option>
-            <!-- futuramente: <option value="calculadora-quadrupla.html">4 (Quádrupla)</option> -->
-        </select>
-    </div>
-    <table>
-        <thead>
-            <tr>
-                <th>Chance</th>
-                <th>Odd</th>
-                <th>Comissão (%)</th>
-                <th>Aposta</th>
-                <th>Travar</th>
-                <th>Cashback (%)</th>
-                <th>Tipo Cashback</th>
-                <th>Lucro</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td class="symbol" id="s1" onclick="alternarTipo(1)">+</td>
-                <td><input type="number" step="0.01" id="odd1" value="2.00" /></td>
-                <td><input type="number" step="0.1" id="comissao1" value="0.0" /></td>
-                <td>
-                    <div id="backGroup1">
-                        <input type="number" step="0.01" id="aposta1" placeholder="Aposta" />
-                    </div>
-                    <div class="lay-fields" id="layGroup1">
-                        <label class="lay-label">Responsabilidade</label>
-                        <input type="number" step="0.01" id="resp1" placeholder="Responsabilidade" />
-                        <label class="lay-label">Aposta a favor</label>
-                        <input type="number" step="0.01" id="aFavor1" placeholder="Aposta a favor" />
-                    </div>
-                </td>
-                <td><input type="radio" id="travar1" name="travar" onclick="travar(1)" /></td>
-                <td><input type="number" step="0.1" id="cashback1" value="0.0" /></td>
-                <td class="freebet-cell">
-                    <select id="tipo1" onchange="toggleFreebetMax(1)">
-                        <option value="real">Saldo Real</option>
-                        <option value="freebet">Freebet</option>
-                    </select>
-                    <input type="number" id="maxFreebet1" placeholder="Máx. Freebet"
-                        style="display:none; width:80px;" />
-                    <span id="labelFreebet1" class="freebet-label" style="display:none;">
-                        Máx. Freebet
-                    </span>
-                </td>
-                <td id="lucro1">0.00</td>
-            </tr>
-            <tr>
-                <td class="symbol" id="s2" onclick="alternarTipo(2)">+</td>
-                <td><input type="number" step="0.01" id="odd2" value="2.00" /></td>
-                <td><input type="number" step="0.1" id="comissao2" value="0.0" /></td>
-                <td>
-                    <div id="backGroup2">
-                        <input type="number" step="0.01" id="aposta2" placeholder="Aposta" />
-                    </div>
-                    <div class="lay-fields" id="layGroup2">
-                        <label class="lay-label">Responsabilidade</label>
-                        <input type="number" step="0.01" id="resp2" placeholder="Responsabilidade" />
-                        <label class="lay-label">Aposta a favor</label>
-                        <input type="number" step="0.01" id="aFavor2" placeholder="Aposta a favor" />
-                    </div>
-                </td>
-                <td><input type="radio" id="travar2" name="travar" onclick="travar(2)" /></td>
-                <td><input type="number" step="0.1" id="cashback2" value="0.0" /></td>
-                <td class="freebet-cell">
-                    <select id="tipo2" onchange="toggleFreebetMax(2)">
-                        <option value="real">Saldo Real</option>
-                        <option value="freebet">Freebet</option>
-                    </select>
-                    <input type="number" id="maxFreebet2" placeholder="Máx. Freebet"
-                        style="display:none; width:80px;" />
-                    <span id="labelFreebet2" class="freebet-label" style="display:none;">
-                        Máx. Freebet
-                    </span>
-                </td>
-                <td id="lucro2">0.00</td>
-            </tr>
-            <tr class="total-row">
-                <td id="totalColspan" colspan="3"></td>
-                <td>
-                    <input type="number" step="0.01" id="montanteTotal" placeholder="Total" readonly />
-                </td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-        </tbody>
-    </table>
-    <div style="margin-top: 1rem;">
-        <label>
-            Conversão Freebet (%):
-            <input type="number" id="freebetConversion" value="75" min="0" max="100" step="1"
-                style="width:50px; margin-left:0.5rem;" />
-        </label>
-    </div>
+  <h2>Calculadora de Apostas Com Cashback</h2>
+  <div style="margin: 1rem 0; display: flex; align-items: center;">
+    <label for="numApostas" style="margin-right: 0.5rem; font-weight: bold;">
+      Número de apostas:
+    </label>
+    <select id="numApostas" onchange="window.location.href=this.value"
+      style="padding: 0.4rem 0.6rem; border-radius: 5px; border: none;">
+      <option value="calculadora-dupla.html" selected>2 (Dupla)</option>
+      <option value="index.html">3 (Tripla)</option>
+    </select>
+  </div>
+  <table>
+    <thead>
+      <tr>
+        <th>Chance</th>
+        <th>Odd</th>
+        <th>Comissão (%)</th>
+        <th>Aposta</th>
+        <th>Travar</th>
+        <th>Cashback (%)</th>
+        <th>Tipo Cashback</th>
+        <th>Lucro</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td class="symbol" id="s1" onclick="alternarTipo(1)">+</td>
+        <td><input type="number" step="0.01" id="odd1" value="2.00" /></td>
+        <td><input type="number" step="0.1" id="comissao1" value="0.0" /></td>
+        <td>
+          <div id="backGroup1">
+            <input type="number" step="0.01" id="aposta1" placeholder="Aposta" />
+          </div>
+          <div class="lay-fields" id="layGroup1">
+            <label class="lay-label">Responsabilidade</label>
+            <input type="number" step="0.01" id="resp1" placeholder="Responsabilidade" />
+            <label class="lay-label">Aposta a favor</label>
+            <input type="number" step="0.01" id="aFavor1" placeholder="Aposta a favor" />
+          </div>
+        </td>
+        <td><input type="radio" id="travar1" name="travar" onclick="travar(1)" /></td>
+        <td><input type="number" step="0.1" id="cashback1" value="0.0" /></td>
+        <td class="freebet-cell">
+          <select id="tipo1" onchange="toggleFreebetMax(1)">
+            <option value="real">Saldo Real</option>
+            <option value="freebet">Freebet</option>
+            <option value="deposito">Depósito</option>
+          </select>
+          <input type="number" id="maxFreebet1" placeholder="Máx. Freebet" style="display:none; width:80px;" />
+          <span id="labelFreebet1" class="freebet-label" style="display:none;">
+            Máx. Freebet
+          </span>
+        </td>
+        <td id="lucro1">0.00</td>
+      </tr>
+      <tr>
+        <td class="symbol" id="s2" onclick="alternarTipo(2)">+</td>
+        <td><input type="number" step="0.01" id="odd2" value="2.00" /></td>
+        <td><input type="number" step="0.1" id="comissao2" value="0.0" /></td>
+        <td>
+          <div id="backGroup2">
+            <input type="number" step="0.01" id="aposta2" placeholder="Aposta" />
+          </div>
+          <div class="lay-fields" id="layGroup2">
+            <label class="lay-label">Responsabilidade</label>
+            <input type="number" step="0.01" id="resp2" placeholder="Responsabilidade" />
+            <label class="lay-label">Aposta a favor</label>
+            <input type="number" step="0.01" id="aFavor2" placeholder="Aposta a favor" />
+          </div>
+        </td>
+        <td><input type="radio" id="travar2" name="travar" onclick="travar(2)" /></td>
+        <td><input type="number" step="0.1" id="cashback2" value="0.0" /></td>
+        <td class="freebet-cell">
+          <select id="tipo2" onchange="toggleFreebetMax(2)">
+            <option value="real">Saldo Real</option>
+            <option value="freebet">Freebet</option>
+            <option value="deposito">Depósito</option>
+          </select>
+          <input type="number" id="maxFreebet2" placeholder="Máx. Freebet" style="display:none; width:80px;" />
+          <span id="labelFreebet2" class="freebet-label" style="display:none;">
+            Máx. Freebet
+          </span>
+        </td>
+        <td id="lucro2">0.00</td>
+      </tr>
+      <tr class="total-row">
+        <td id="totalColspan" colspan="3"></td>
+        <td>
+          <input type="number" step="0.01" id="montanteTotal" placeholder="Total" readonly />
+        </td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+    </tbody>
+  </table>
+  <div style="margin-top: 1rem;">
+    <label>
+      Conversão Freebet (%):
+      <input type="number" id="freebetConversion" value="75" min="0" max="100" step="1"
+        style="width:50px; margin-left:0.5rem;" />
+    </label>
+  </div>
 
-    <div style="margin-top: 1rem;">
-        <label>
-            <input type="checkbox" id="arredondarCheck" />
-            Arredondar aposta até:
-        </label>
-        <input type="number" id="arredondarValor" value="5" min="1" max="5" step="1"
-            style="width: 50px; margin-left: 0.5rem;" />
-    </div>
-    <div style="margin-top: 1rem;">
-        <label>
-            <input type="checkbox" id="toggleCommissionCheckbox" checked
-                style="transform: scale(1.2); margin-right: 0.5rem;" />
-            Exibir Comissão
-        </label>
-    </div>
-    <div id="updateNote" style="margin-top:1.5rem; font-size:0.9rem; color:#ccc;">
-        <strong>Atualizações implementadas:</strong>
-        <ul style="margin:0.5rem 0 0 1.2rem; padding:0;">
-            <li>Botão de exibição/ocultação de comissão.</li>
-            <li>
-                Suporte para cashback com Freebet: agora é possível selecionar o tipo de cashback pela coluna “Tipo
-                Cashback”.
-                O cálculo relativo ao cashback em Freebet usa a taxa de conversão de Freebet (padrão 75%, editável)
-                e respeita o valor máximo de Freebet configurado (campo opcional).
-            </li>
-            <li>Ajustes personalizados para montantes de apostas. O lucro só vai ser equilibrado se o usuário alterar o
-                montante de aposta que está travado, se alterar qualquer valor de aposta que não estiver travada, não
-                será feito o equilibrio e o lucro será calculado de acordo com os montantes em cada aposta</li>
-        </ul>
-        <p>Em breve suporte a apostas duplas e quadruplas</p>
-    </div>
-    <script src="script-dupla.js"></script>
+  <div style="margin-top: 1rem;">
+    <label>
+      <input type="checkbox" id="arredondarCheck" />
+      Arredondar aposta até:
+    </label>
+    <input type="number" id="arredondarValor" value="5" min="1" max="5" step="1"
+      style="width: 50px; margin-left: 0.5rem;" />
+  </div>
+  <div style="margin-top: 1rem;">
+    <label>
+      <input type="checkbox" id="toggleCommissionCheckbox" checked
+        style="transform: scale(1.2); margin-right: 0.5rem;" />
+      Exibir Comissão
+    </label>
+  </div>
+
+</body>
 
 </html>
